--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
                 <div>
                     <div>
                         Выключатель №1
-                        <input type="checkbox" checked>
+                        <input type="checkbox" name="floor" checked>
                     </div>
                 </div>
                 <div>
                     <div>
                         Выключатель №2
-                        <input type="checkbox">
+                        <input name="floor" type="checkbox">
                     </div>
                 </div>
                 <div>
                     <div>
                         <div>
                             Вариант №1
-                            <input type="radio" value="1" checked>
+                            <input type="radio" name="floor1"value="1" checked>
                         </div>
                         <div>
                             Вариант №2
-                            <input type="radio" value="2">
+                            <input type="radio" name="floor1" value="2">
                         </div>
                         <div>
                             Вариант №3
-                            <input type="radio" value="3">
+                            <input type="radio" name="floor1" value="3">
                         </div>
                     </div>
                 </div>
