--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <div>
                     <div>
                         Выключатель №2
-                        <input name="floor" type="checkbox">
+                        <input type="checkbox" name="floor">
                     </div>
                 </div>
                 <div>
                     <div>
                         <div>
                             Вариант №1
-                            <input type="radio" name="floor1"value="1" checked>
+                            <input type="radio" name="floor1" value="1" checked>
                         </div>
                         <div>
                             Вариант №2
